@@ -102,11 +102,11 @@ class MediaWiki {
 
 		$ret = NULL;
 
-		if ( '' == $title && 'delete' != $action ) {
-			$ret = Title::newMainPage();
-		} elseif ( $curid = $wgRequest->getInt( 'curid' ) ) {
+		if ( $curid = $wgRequest->getInt( 'curid' ) ) {
 			# URLs like this are generated by RC, because rc_title isn't always accurate
 			$ret = Title::newFromID( $curid );
+		} elseif ( '' == $title && 'delete' != $action ) {
+			$ret = Title::newMainPage();
 		} else {
 			$ret = Title::newFromURL( $title );
 			// check variant links so that interwiki links don't have to worry
